# afn

./: .gitignore  README.md  pyproject.toml
.github/instructions/: modularization.instructions.md
app/: afn.py
app/core/: element.py  route.py  star.py
app/tests/: test_afn.py  test_helper.py  test_star.py  test_stream.py
app/utils/: constants.py  geometry.py  helper.py  plotter.py  stream.py  utils.py
optimals/wi29/: report.md
