[tool.poetry]
name = "afn"
version = "1.0.0"
description = "AFN heuristic for the Traveling Salesman Problem"
authors = ["Mauricio Cleveland <mauricio.cleveland@gmail.com>"]
readme = "README.md"
packages = [
    { include = "afn.py", from = "app" },
    { include = "core", from = "app" },
    { include = "utils", from = "app" },
]

[tool.poetry.scripts]
afn = "afn:main"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = ">=3.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[tool.pytest.ini_options]
testpaths = ["app/tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
